--- a/railway.toml
+++ b/railway.toml
@@ -1,13 +1,21 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "npm run build"
+nixpacksVersion = "1.13.0"
+buildCommand = "./deploy-railway.sh"
 
 [deploy]
-startCommand = "npm run start"
-healthcheckPath = "/"
-healthcheckTimeout = 100
+numReplicas = 1
+sleepApplication = true
 restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 10
 
-[service]
-port = 5000
+[functions]
+nodeVersion = "20"
+
+[[services]]
+name = "web"
 internal_port = 5000
+health_check_path = "/api/health"
+health_check_timeout_seconds = 10
+health_check_interval_seconds = 10
+start_command = "node dist/index.js"
