--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
+  "buildCommand": "bash ./vercel-build.sh",
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "framework": null,
