--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,6 @@
-# Dependencies
 node_modules
-.pnp
-.pnp.js
-
-# Testing
-coverage
-
-# Production
 dist
-build
-.serverless
-.fusebox
-.dynamodb
-
-# Misc
 .DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.vercel
-.next
-.vscode
+server/public
+vite.config.ts.*
 *.tar.gz
