--- a/vercel.json
+++ b/vercel.json
@@ -4,19 +4,15 @@
   "outputDirectory": "dist/public",
   "builds": [
     { "src": "api/index.js", "use": "@vercel/node" },
-    { "src": "dist/public/**", "use": "@vercel/static" }
+    { "src": "client/**", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/index.js" },
     { "src": "/health", "dest": "/api/index.js" },
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/dist/public/$1" },
-    { "src": "/", "dest": "/dist/public/index.html" }
+    { "src": "/(.*)", "dest": "/client/$1" },
+    { "src": "/", "dest": "/client/index.html" }
   ],
   "env": {
     "NODE_ENV": "production"
-  },
-  "framework": "vite",
-  "installCommand": "npm install",
-  "regions": ["iad1"]
+  }
 }
