--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,16 @@
 {
   "version": 2,
-  "framework": "vite",
-  "buildCommand": "npm install && cd client && npm install && npm run build",
-  "outputDirectory": "client/dist",
-  "installCommand": "npm install",
+  "builds": [
+    { "src": "api/index.js", "use": "@vercel/node" },
+    { "src": "client/package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
+  ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/index.js" },
     { "src": "/health", "dest": "/api/index.js" },
-    { "src": "/(.*)", "dest": "/client/dist/$1" },
-    { "src": "/", "dest": "/client/dist/index.html" }
-  ]
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/client/dist/$1" }
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
