--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "node server/index.js",
     "dev": "nodemon server/index.js",
-    "build": "cd LostShop-1/client && npm install && npm run build",
-    "install-client": "cd LostShop-1/client && npm install",
-    "client": "cd LostShop-1/client && npm run dev",
+    "build": "npm install && cd client && npm install && npm run build",
+    "install-client": "cd client && npm install",
+    "client": "cd client && npm run dev",
     "dev:full": "concurrently \"npm run dev\" \"npm run client\""
   },
   "keywords": [],
