--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon server/index.js",
-    "build": "npm install && tsc && node esbuild.config.js && node fix-paths.js && cd client && npm install && npm run build && mkdir -p ../dist/public && cp -r dist/* ../dist/public/",
-    "vercel-build": "tsc && node esbuild.config.js && node fix-paths.js && cd client && npm install && npm run build && mkdir -p ../dist/public && cp -r dist/* ../dist/public/",
+    "build": "npm install && node esbuild.config.js && node fix-paths.js && cd client && npm install && npm run build && mkdir -p ../dist/public && cp -r dist/* ../dist/public/",
+    "vercel-build": "mkdir -p dist && node esbuild.config.js && node fix-paths.js && cd client && npm install && npm run build && mkdir -p ../dist/public && cp -r dist/* ../dist/public/",
     "install-client": "cd client && npm install",
     "client": "cd client && npm run dev",
     "dev:full": "concurrently \"npm run dev\" \"npm run client\""
